[gd_scene load_steps=9 format=3 uid="uid://b6uy0gep2p7o"]

[ext_resource type="Script" uid="uid://bbt7i4rley3qg" path="res://scenes/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://d3i6404agcffi" path="res://scenes/bug.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://dpq65xgf4b02r" path="res://scenes/enemy.tscn" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://fnwnrwc17c24" path="res://assets/ngu5ofssout01.png" id="2_tefeu"]
[ext_resource type="Script" uid="uid://dlembpmgladcc" path="res://scenes/goal_area.gd" id="3_sugp2"]
[ext_resource type="Texture2D" uid="uid://hhaef11tco1i" path="res://assets/firewall-3531838_960_720.webp" id="4_tbgi4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(1152, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.3372549)
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_tefeu")

[node name="Bug" parent="." instance=ExtResource("1_o5qli")]
z_index = 10
position = Vector2(401, 550)

[node name="Enemy" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(639, 335)

[node name="Enemy2" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(639, 284)
speed = 150.0

[node name="Enemy3" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(640, 233)

[node name="FirewallBar" type="TextureRect" parent="."]
offset_right = 1151.0
offset_bottom = 66.0
texture = ExtResource("4_tbgi4")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="GoalHole" type="ColorRect" parent="FirewallBar"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015151516
offset_right = 80.0
offset_bottom = 65.0
color = Color(0.09842711, 0.5412706, 0.016363975, 1)
metadata/_edit_use_anchors_ = true

[node name="GoalArea" type="Area2D" parent="."]
position = Vector2(400, 20)
script = ExtResource("3_sugp2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalArea"]
position = Vector2(176, 12.5)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="Barrier1" type="Area2D" parent="."]
position = Vector2(550, 420)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier1"]
scale = Vector2(100, 1)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Bar1visual" type="ColorRect" parent="Barrier1"]
offset_left = -550.0
offset_top = -10.0
offset_right = 602.0
offset_bottom = 10.0
color = Color(0.94509804, 0, 0.14901961, 1)
metadata/_edit_use_anchors_ = true

[node name="Bar1Hole" type="ColorRect" parent="Barrier1"]
offset_left = -437.0
offset_top = -10.0
offset_right = -397.0
offset_bottom = 10.0
color = Color(0.20784314, 0.20392157, 0.25490198, 1)
metadata/_edit_use_anchors_ = true

[node name="Barrier2" type="Area2D" parent="."]
position = Vector2(550, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier2"]
scale = Vector2(100, 1)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Bar2visual" type="ColorRect" parent="Barrier2"]
offset_left = -550.0
offset_top = -10.0
offset_right = 602.0
offset_bottom = 10.0
color = Color(0.94509804, 0, 0.14901961, 1)
metadata/_edit_use_anchors_ = true

[node name="Bar2Hole" type="ColorRect" parent="Barrier2"]
offset_left = 400.0
offset_top = -10.0
offset_right = 440.0
offset_bottom = 10.0
color = Color(0.20392157, 0.20392157, 0.25490198, 1)
metadata/_edit_use_anchors_ = true

[node name="Barrier3" type="Area2D" parent="."]
position = Vector2(550, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier3"]
scale = Vector2(100, 1)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Bar3visual" type="ColorRect" parent="Barrier3"]
offset_left = -550.0
offset_top = -10.0
offset_right = 602.0
offset_bottom = 10.0
color = Color(0.94509804, 0, 0.14901961, 1)
metadata/_edit_use_anchors_ = true

[node name="Bar3Hole" type="ColorRect" parent="Barrier3"]
offset_left = -500.0
offset_top = -10.0
offset_right = -460.0
offset_bottom = 10.0
color = Color(0.20392157, 0.20392157, 0.26666668, 1)
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Enemy2" to="." method="_on_enemy_body_entered"]
[connection signal="body_entered" from="Enemy3" to="." method="_on_enemy_body_entered"]
[connection signal="body_entered" from="GoalArea" to="." method="_on_goal_area_body_entered"]
[connection signal="body_entered" from="Barrier1" to="." method="_on_barrier1_body_entered"]
[connection signal="body_entered" from="Barrier2" to="." method="_on_barrier2_body_entered"]
[connection signal="body_entered" from="Barrier3" to="." method="_on_barrier3_body_entered"]
